[tool.poetry]
name = "babycounter"
version = "0.1.0"
description = ""
authors = ["petelouise <programmetress@petelouise.beauty>"]
readme = "README.md"

[tool.poetry.dependencies]
rich = "^10.0.0"
python = "^3.12"
lyricsgenius = "^3.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
