[tool.poetry]
name = "babycounter"
version = "0.1.0"
description = ""
authors = ["petelouise <programmetress@petelouise.beauty>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lyricsgenius = "^3.0.1"
python-dotenv = "^1.0.1"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
